--- a/_pages/cv.html
+++ b/_pages/cv.html
@@ -8,10 +8,9 @@ redirect_from:
 ---
 
 <a 
-    href="https://github.com/mahdi-ul-bari/mahdi-ul-bari.github.io/files/Mahdi_Ul_Bari_One_Page.pdf" 
+    href="https://raw.githubusercontent.com/mahdi-ul-bari/mahdi-ul-bari.github.io/main/assets/Mahdi_Ul_Bari_One_Page.pdf" 
     download="Mahdi_Ul_Bari_One_Page.pdf"
 >
     CV (Download)
 </a>
-
 
