--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -1,3 +1,11 @@
+---
+permalink: /projects/
+title: "Projects"
+author_profile: true
+redirect_from: 
+  - /projects.html
+---
+
 
 <div class="star-summary" style="border: 1px solid #a0c0ff; padding: 20px; border-radius: 10px; background-color: #e6f0ff; max-width: 750px; margin: auto; font-family: Arial, sans-serif;">
 
