--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -7,44 +7,44 @@ redirect_from:
 ---
 
 
-<div class="star-summary" style="border: 1px solid #a0c0ff; padding: 20px; border-radius: 10px; background-color: #e6f0ff; max-width: 750px; margin: auto; font-family: Arial, sans-serif;">
+<div class="star-summary" style="border: 1px solid #7f8c8d; padding: 20px; border-radius: 10px; background-color: #34495e; max-width: 750px; margin: auto; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #ecf0f1;">
 
-    <h2 style="color: #0056b3; text-align: center; margin-top: 0; margin-bottom: 15px; border-bottom: 2px solid #a0c0ff; padding-bottom: 10px;">
+    <h2 style="color: #3498db; text-align: center; margin-top: 0; margin-bottom: 15px; border-bottom: 2px solid #3498db; padding-bottom: 10px;">
         Spinal Cord Injury in Bangladesh (2011–2021): An 11-Year Single-Centre Epidemiological Study
     </h2>
     
-    <p style="text-align: center; font-style: italic; margin-bottom: 20px;">Summary structured using the STAR Method</p>
+    <p style="text-align: center; font-style: italic; margin-bottom: 20px; color: #bdc3c7;">Summary structured using the STAR Method</p>
 
     <ol style="list-style: none; padding: 0;">
         <li style="margin-bottom: 20px;">
-            <p style="font-weight: bold; color: #0056b3; margin-bottom: 5px;">
-                <span style="color: #dc3545; margin-right: 5px;">S</span>ITUATION (The Condition):
+            <p style="font-weight: bold; color: #3498db; margin-bottom: 5px;">
+                <span style="color: #e74c3c; margin-right: 5px;">S</span>ITUATION (The Condition):
             </p>
-            <p style="margin: 0 0 0 25px; border-left: 3px solid #ffc107; padding-left: 10px;">
+            <p style="margin: 0 0 0 25px; border-left: 3px solid #f1c40f; padding-left: 10px;">
                 The project addressed the significant burden and lack of current epidemiological data for **Spinal Cord Injury (SCI)** in developing nations. The specific condition was analyzing the retrospective data of **3,575 individuals with SCI** admitted to a major rehabilitation center in Bangladesh over an 11-year period (2011–2021).
             </p>
         </li>
         <li style="margin-bottom: 20px;">
-            <p style="font-weight: bold; color: #0056b3; margin-bottom: 5px;">
-                <span style="color: #dc3545; margin-right: 5px;">T</span>ASK (Data Processing):
+            <p style="font-weight: bold; color: #3498db; margin-bottom: 5px;">
+                <span style="color: #e74c3c; margin-right: 5px;">T</span>ASK (Data Processing):
             </p>
-            <p style="margin: 0 0 0 25px; border-left: 3px solid #28a745; padding-left: 10px;">
+            <p style="margin: 0 0 0 25px; border-left: 3px solid #2ecc71; padding-left: 10px;">
                 I was tasked with performing the **data cleaning, manipulation, and cleaning** necessary to transform raw patient records into a structured format for statistical analysis, allowing for the accurate identification of demographic and injury patterns.
             </p>
         </li>
         <li style="margin-bottom: 20px;">
-            <p style="font-weight: bold; color: #0056b3; margin-bottom: 5px;">
-                <span style="color: #dc3545; margin-right: 5px;">A</span>CTION (Methodology):
+            <p style="font-weight: bold; color: #3498db; margin-bottom: 5px;">
+                <span style="color: #e74c3c; margin-right: 5px;">A</span>CTION (Methodology):
             </p>
-            <p style="margin: 0 0 0 25px; border-left: 3px solid #17a2b8; padding-left: 10px;">
+            <p style="margin: 0 0 0 25px; border-left: 3px solid #1abc9c; padding-left: 10px;">
                 I **used the R language** and its dedicated packages to implement robust data pipelines. This involved reading various data formats, standardizing variables, handling missing values, and generating the necessary counts and percentages to calculate incidence rates, prevalence, and mortality for different injury causes.
             </p>
         </li>
         <li>
-            <p style="font-weight: bold; color: #0056b3; margin-bottom: 5px;">
-                <span style="color: #dc3545; margin-right: 5px;">R</span>ESULT (Outcome):
+            <p style="font-weight: bold; color: #3498db; margin-bottom: 5px;">
+                <span style="color: #e74c3c; margin-right: 5px;">R</span>ESULT (Outcome):
             </p>
-            <p style="margin: 0 0 0 25px; border-left: 3px solid #dc3545; padding-left: 10px;">
+            <p style="margin: 0 0 0 25px; border-left: 3px solid #e74c3c; padding-left: 10px;">
                 The analysis successfully characterized SCI patterns, revealing that **traumatic SCIs accounted for 92.7%** of cases, primarily from **falls (56.3%)** and road traffic accidents (25.0%). The population was predominantly **male (85.7%)** and **paraplegia (58.9%)** was the most common condition. These key findings provide **critical, actionable data** to inform and target national SCI prevention and rehabilitation strategies.
             </p>
         </li>
